* MainActivity.cs: * MenuFragment.cs: * MenuActivity.cs: * SplashActivity.cs: * MenuPagerAdapter.cs: * MenuManager.cs: * FoodTruckAndroid.csproj: * Main.axml: * Icon.png: * pasta.jpg: * tacos.jpg: * main.xml: * AndroidManifest.xml: * Resource.designer.cs: * burritos.jpg: * icon.png: * tacosmall.jpg: * pastasmall.jpg: * MapActivity.axml: * MenuFragment.axml: * MenuActivity.axml: * burritosmall.jpg: * ensaladasmall.jpg: * R.java:
* DonBurritoSanchoPasta.userprefs: Se incluye tabs en el action bar e
  intent para mostrar el mapa

--- a/FoodTruckAndroid/FoodTruckAndroid.csproj
+++ b/FoodTruckAndroid/FoodTruckAndroid.csproj
@@ -42,12 +42,20 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="Xamarin.Android.Support.v4">
+      <HintPath>..\Components\xamandroidsupportv4-18-19.1.0\lib\android\Xamarin.Android.Support.v4.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.AppCompat">
+      <HintPath>..\Components\xamandroidsupportv7appcompat-19.1.0\lib\android\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SplashActivity.cs" />
+    <Compile Include="MenuFragment.cs" />
+    <Compile Include="MenuActivity.cs" />
+    <Compile Include="MenuPagerAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -55,15 +63,17 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\values\Strings.xml" />
-    <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\values\Styles.xml" />
-    <AndroidResource Include="Resources\drawable\tacos.jpg" />
-    <AndroidResource Include="Resources\drawable\burritos.jpg" />
-    <AndroidResource Include="Resources\drawable\pasta.jpg" />
     <AndroidResource Include="Resources\drawable\NewIcon.png" />
     <AndroidResource Include="Resources\drawable\splashfoodtruck.png" />
+    <AndroidResource Include="Resources\layout\MenuFragment.axml" />
+    <AndroidResource Include="Resources\layout\MenuActivity.axml" />
+    <AndroidResource Include="Resources\drawable\burritosmall.jpg" />
+    <AndroidResource Include="Resources\drawable\ensaladasmall.jpg" />
+    <AndroidResource Include="Resources\drawable\pastasmall.jpg" />
+    <AndroidResource Include="Resources\drawable\tacosmall.jpg" />
+    <AndroidResource Include="Resources\layout\MapActivity.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
@@ -71,5 +81,15 @@
       <Project>{B51D6ECA-E595-4F91-B995-7582A6394C6D}</Project>
       <Name>FoodTruckClassLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <XamarinComponentReference Include="xamandroidsupportv4-18">
+      <Version>19.1.0</Version>
+      <Visible>False</Visible>
+    </XamarinComponentReference>
+    <XamarinComponentReference Include="xamandroidsupportv7appcompat">
+      <Version>19.1.0</Version>
+      <Visible>False</Visible>
+    </XamarinComponentReference>
   </ItemGroup>
 </Project>
