--- a/FoodTruckAndroid/Properties/AndroidManifest.xml
+++ b/FoodTruckAndroid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="FoodTruckAndroid.FoodTruckAndroid">
 	<uses-sdk />
-	<application android:label="FoodTruckAndroid" android:theme="@android:style/Theme.Holo.Light"></application>
+	<application android:label="Don Burrito y Sancho Pasta" android:theme="@android:style/Theme.Holo.Light" android:icon="@drawable/newicon"></application>
 </manifest>
