--- a/FoodTruckAndroid/Properties/AndroidManifest.xml
+++ b/FoodTruckAndroid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.FoodTruckAndroid.FoodTruckAndroid">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.1" package="com.FoodTruckAndroid.FoodTruckAndroid" android:versionCode="2">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15" />
 	<application android:label="Don Burrito y Sancho Pasta" android:theme="@style/Theme.Foodtruck" android:icon="@drawable/appicon">
 		<!--- <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDbW7Ttqh_IfWQh9SZhjB-pNDsaU87aJZY" /> -->
