--- a/FoodTruckiOS/FoodTruckiOS.csproj
+++ b/FoodTruckiOS/FoodTruckiOS.csproj
@@ -96,17 +96,26 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="FirstViewController.cs" />
-    <Compile Include="SecondViewController.cs" />
-    <Compile Include="FirstViewController.designer.cs">
-      <DependentUpon>FirstViewController.cs</DependentUpon>
+    <Compile Include="ContactUsViewController.cs" />
+    <Compile Include="ContactUsViewController.designer.cs">
+      <DependentUpon>ContactUsViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="SecondViewController.designer.cs">
-      <DependentUpon>SecondViewController.cs</DependentUpon>
+    <Compile Include="MenuViewController.cs" />
+    <Compile Include="MenuViewController.designer.cs">
+      <DependentUpon>MenuViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MapaViewController.cs" />
+    <Compile Include="MapaViewController.designer.cs">
+      <DependentUpon>MapaViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ContactViewController.cs" />
+    <Compile Include="ContactViewController.designer.cs">
+      <DependentUpon>ContactViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainStoryboard.storyboard" />
+    <InterfaceDefinition Include="ContactUsViewController.xib" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -116,4 +125,5 @@
     <BundleResource Include="Resources\second%402x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
 </Project>
